syntax = "proto3";

package firmament;

message MatchLabels{

  string key = 1;

  string value = 2;

}

message LabelSelectorRequirement {

  string key = 1;

  string operator = 2;

  repeated string values = 3;
}

message PodLabelSelector{

  MatchLabels matchLabels = 1;

  repeated LabelSelectorRequirement matchExpressions = 2;
}

message PodAffinityTerm {

  PodLabelSelector labelSelector = 1;

  repeated string namespaces = 2;
  // Empty topologyKey is not allowed.
  string topologyKey = 3;
}

message WeightedPodAffinityTerm {
  // weight associated with matching the corresponding podAffinityTerm,
  // in the range 1-100.
  int32 weight = 1;
  // A pod affinity term, associated with the corresponding weight.
  PodAffinityTerm podAffinityTerm = 2;
}

message PodAffinity {

  repeated PodAffinityTerm requiredDuringSchedulingIgnoredDuringExecution = 1;

  repeated WeightedPodAffinityTerm preferredDuringSchedulingIgnoredDuringExecution = 2;
}
